--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ ratatui = "0.26"
 crossterm = "0.27"
 anyhow = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
